Added meter module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.servlet.context-path=/
-server.port=9090
-spring.datasource.url=jdbc:postgresql://localhost:5432/electricity
+server.port=8585
+spring.datasource.url=jdbc:postgresql://localhost:8080/electricity
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Neharaju20@
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
