Added customer module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.servlet.context-path=/
 server.port=9090
 spring.datasource.url=jdbc:postgresql://localhost:5432/electricity
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Beulah@333
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
